# staticsitecompanion

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.json.example  sqlx-data.json
migrations/: 20220903102205_initial_schema.sql
src/: config.rs  form.rs  lib.rs  main.rs
src/controller/: downloadable_controller.rs  form_controller.rs  heartbeat_controller.rs  mod.rs
src/dao/: db_context.rs  download_log_dao.rs  download_version_dao.rs  downloadable_dao.rs  form_dao.rs  form_submission_dao.rs  mod.rs  user_dao.rs
src/model/: download.rs  download_log_entry.rs  download_version.rs  form.rs  form_submission.rs  mod.rs  user.rs
