[package]
name = "staticsitecompanion"
version = "0.2.0"
authors = ["oweissbarth <mail@oweissbarth.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.2"
actix-governor = "0.3.2"
sqlx = { version = "0.6.1", features = ["runtime-actix-rustls", "mysql", "chrono", "macros", "uuid", "json", "offline"]}
serde = "1.0.144"
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
chrono = { version = "0.4.22", features = ["serde"] }
env_logger = "0.9.0"
reqwest = { version = "0.11.11", features=["json"]}
futures = "0.3.24"